--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,6 +26,7 @@
 }
 .item:hover {
   color: red;
+  font-weight: bold;
 }
 .bannar-img {
   width: 300px;
@@ -33,7 +34,7 @@
 .bannar-containor {
   display: flex;
   justify-content: space-around;
-  height: 100vh;
+  height: 80vh;
   align-items: center;
   background-image: url(/IMG/IMG_20230618_141506.png),
     linear-gradient(45deg, rgb(8, 8, 8), rgb(53, 53, 53));
@@ -60,4 +61,5 @@
   color: white;
   background-color: red;
   font-weight: bold;
+  transition: 0.5s;
 }
